default/minio/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: default
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: minio
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:minio
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      containers:
      - name: minio
        image: minio/minio:RELEASE.2020-11-13T20-10-18Z
        command: ["minio"]
        args: ["server","/data"]
        volumeMounts:
        - mountPath: /data
          name: minio
          subPath: minio-data
        ports:
        - containerPort: 9000
          name: minio
