default/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
spec:
  selector:
    app: minio
  ports:
  - name: minio
    port: 9000
