default/minio/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: minio
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: minio
  ingress:
  - ports:
    - port: 9000
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
